<resources>
    <string name="app_name">ZhiBook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_preview">预览</string>
    <string name="action_addPic">插入图片</string>
    <string name="action_send">发布</string>
    <string name="action_save_to_pic">保存为图片</string>
    <string name="action_login">登录</string>
    <string name="action_share">分享日报</string>
    <string name="action_un_login">退出登录</string>
    <string name="toolbar_home">首页</string>
    <string name="toolbar_answer">回答</string>
    <string name="toolbar_edit_note">编辑笔记</string>
    <string name="toolbar_display">预览</string>
    <string name="toolbar_note">MarkDown笔记</string>
    <string name="toolbar_chat">吵吵机器人</string>
    <string name="toolbar_answer_edit">撰写回答</string>
    <string name="toolbar_player">播放器</string>

    <string name="tab_home">首页</string>
    <string name="tab_find">日报</string>
    <string name="tab_note">笔记</string>
    <string name="tab_chat">聊天</string>
    <string name="tab_player">播放器</string>
    <string name="tab_theme">切换主题</string>
        
    <string name="find_zhihu">知乎日报</string>


    <string name="bt_login">登录</string>
    <string name="bt_register">注册</string>

    <string name="hint_username">用户名</string>
    <string name="hint_password">密码</string>
</resources>
