<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_tab_home"
            android:title="@string/tab_home"
            android:checked="true"/>
        <item
            android:id="@+id/nav_find"
            android:icon="@drawable/ic_tab_find"
            android:title="@string/tab_find" />

        <item
            android:id="@+id/nav_note"
            android:title="@string/tab_note"
            android:icon="@drawable/ic_tab_note"/>

        <item
            android:id="@+id/nav_chat"
            android:title="@string/tab_chat"
            android:icon="@drawable/ic_tab_chat"/>

        <item
            android:id="@+id/nav_player"
            android:title="@string/tab_player" />
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Tools" />-->
    </group>

    <item android:title="设置">
        <menu>
            <item
                android:title="@string/tab_theme" />
        </menu>
    </item>

</menu>
